external-crates/move/crates/move-compiler/tests/move_2024/typing/module_call_visibility_nested.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03003]: unbound module member
   ┌─ tests/move_2024/typing/module_call_visibility_nested.move:15:56
   │
15 │     public(package) fun f_package_call_friend(): u64 { mod_0::f_pkg_friend() }
   │                                                        ^^^^^^^^^^^^^^^^^^^ Invalid module access. Unbound function 'f_pkg_friend' in module '0x42::mod_0'

error[E03003]: unbound module member
   ┌─ tests/move_2024/typing/module_call_visibility_nested.move:16:46
   │
16 │     public fun f_public_call_friend(): u64 { mod_0::f_pkg_friend() }
   │                                              ^^^^^^^^^^^^^^^^^^^ Invalid module access. Unbound function 'f_pkg_friend' in module '0x42::mod_0'

error[E03003]: unbound module member
   ┌─ tests/move_2024/typing/module_call_visibility_nested.move:17:40
   │
17 │     fun f_private_call_friend(): u64 { mod_0::f_pkg_friend() }
   │                                        ^^^^^^^^^^^^^^^^^^^ Invalid module access. Unbound function 'f_pkg_friend' in module '0x42::mod_0'
